# bulk-download

./: README.md  pyproject.toml
bulk_download/: downloader.py  main.py  utils.py  xml_parser.py
clim_downloader/: downloader.py  files.py  main.py  utils.py  xml_parser.py
docs/: cesm_download.md
