[tool.poetry]
name = "bulk_download"
version = "0.1.0"
description = ""
authors = ["Ayoub Ghriss <dev@ayghri.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"
aria2p = "^0.12.0"
pyperclip = "^1.9.0"
asciimatics = "^1.15.0"
pydantic = "^2.8.2"


[tool.poetry.scripts]
download_cesm = "bulk_download.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
